--- a/InterkontinentalFront/index.html
+++ b/InterkontinentalFront/index.html
@@ -31,6 +31,6 @@
     <div class="go-top">
         Wróć na górę
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module" ></script>
 </body>
 </html>
